Updated site with almost none of the content added

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -49,16 +49,16 @@ hr.star-light {
 
 hr.star-light:after {
   color: #fff;
-  background-color: #18BC9C;
+  background-color: #bf6e1a;
 }
 
 hr.star-dark {
-  border-color: #2C3E50;
+  border-color: white;
 }
 
 hr.star-dark:after {
-  color: #2C3E50;
-  background-color: white;
+  color: white;
+  background-color: #000307;
 }
 
 section {
@@ -124,7 +124,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #18BC9C;
+  color: #bf6e1a;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
@@ -132,7 +132,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #18BC9C;
+  color: #bf6e1a;
 }
 
 #mainNav .navbar-toggler {
@@ -157,11 +157,11 @@ section h2 {
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     color: #fff;
-    background: #18BC9C;
+    background: #bf6e1a;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
     color: #fff;
-    background: #18BC9C;
+    background: #bf6e1a;
   }
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
@@ -203,6 +203,7 @@ header.masthead h2 {
 
 .portfolio {
   margin-bottom: -15px;
+  background: #000307;
 }
 
 .portfolio .portfolio-item {
@@ -216,7 +217,7 @@ header.masthead h2 {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background-color: rgba(24, 188, 156, 0.9);
+  background-color: rgba(191, 145, 46, 0.8); <!-- rgba(24, 188, 156, 0.9); -->
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
@@ -237,6 +238,8 @@ header.masthead h2 {
 }
 
 .portfolio-modal .portfolio-modal-dialog {
+  background: #000307;
+  color: white;
   padding: 3rem 1rem;
   min-height: calc(100vh - 2rem);
   margin: 1rem calc(1rem - 8px);
@@ -317,7 +320,7 @@ header.masthead h2 {
 }
 
 .floating-label-form-group-with-focus label {
-  color: #18BC9C;
+  color: #bf6e1a;
 }
 
 form .row:first-child .floating-label-form-group {
@@ -327,7 +330,7 @@ form .row:first-child .floating-label-form-group {
 .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #2C3E50;
+  background-color: #000307;
   color: #fff;
 }
 
@@ -336,11 +339,11 @@ form .row:first-child .floating-label-form-group {
 }
 
 a {
-  color: #18BC9C;
+  color: #bf6e1a;
 }
 
 a:focus, a:hover, a:active {
-  color: #128f76;
+  color: #bf912e;
 }
 
 .btn {
@@ -348,34 +351,34 @@ a:focus, a:hover, a:active {
 }
 
 .bg-primary {
-  background-color: #18BC9C !important;
+  background-color: #bf6e1a !important; <!--#bf6e1a -->
 }
 
 .bg-secondary {
-  background-color: #2C3E50 !important;
+  background-color: #000307 !important;
 }
 
 .text-primary {
-  color: #18BC9C !important;
+  color: #bf6e1a !important;
 }
 
 .text-secondary {
-  color: #2C3E50 !important;
+  color: white !important;
 }
 
 .btn-primary {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #bf6e1a;
+  border-color: #bf6e1a;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #128f76;
-  border-color: #128f76;
+  background-color: #bf912e;
+  border-color: #bf912e;
 }
 
 .btn-secondary {
-  background-color: #2C3E50;
-  border-color: #2C3E50;
+  background-color: #000307;
+  border-color: #000307;
 }
 
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
